# cookiecutter-base-py-project

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test.yml
hooks/: post_gen_project.sh
tests/: test_project_generation.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_name}}/.github/workflows/: pre-commit.yml  test.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.rst  requirements.txt
{{cookiecutter.project_name}}/docs/_templates/: badges.html  github.html  moreinfo.html
