[tool.poetry]
name = "cookiecutter-base-py-project"
version = "0.1.0"
description = "Cookiecutter template for python package"
authors = ["Vladimir Kamarzin <vvk@vvk.pp.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest-cookies = "^0.5.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
